--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -2,6 +2,16 @@
   "name": "mpx-project",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "yarn@1.22.22",
+  "author": "ice breaker <1324318532@qq.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
+    "directory": "demo/mpx-app"
+  },
+  "bugs": {
+    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
+  },
   "scripts": {
     "dev": "cross-env BABEL=1 mpx-cli-service serve",
     "dev:debug": "cross-env DEBUG=weapp-tw mpx-cli-service serve",
@@ -16,12 +26,12 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.9.38",
-    "@mpxjs/core": "^2.9.38",
-    "@mpxjs/fetch": "^2.9.1",
-    "@mpxjs/pinia": "^2.9.38",
-    "@mpxjs/store": "^2.9.38",
-    "@mpxjs/utils": "^2.9.38",
+    "@mpxjs/api-proxy": "^2.9.62",
+    "@mpxjs/core": "^2.9.62",
+    "@mpxjs/fetch": "^2.9.62",
+    "@mpxjs/pinia": "^2.9.59",
+    "@mpxjs/store": "^2.9.59",
+    "@mpxjs/utils": "^2.9.59",
     "@vant/weapp": "^1.11.6",
     "pinia": "^2.1.7",
     "tdesign-miniprogram": "^1.4.3",
@@ -32,30 +42,26 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-transform-runtime": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/runtime-corejs3": "^7.24.7",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.5",
     "@mpxjs/eslint-config-ts": "^1.0.5",
     "@mpxjs/miniprogram-simulate": "^1.4.17",
-    "@mpxjs/mpx-cli-service": "^2.1.11",
+    "@mpxjs/mpx-cli-service": "^2.1.16",
     "@mpxjs/mpx-jest": "^0.0.30",
-    "@mpxjs/size-report": "^2.9.26",
-    "@mpxjs/vue-cli-plugin-mpx": "^2.1.11",
-    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.11",
-    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.11",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.11",
-    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.11",
-    "@mpxjs/webpack-plugin": "^2.9.38",
+    "@mpxjs/size-report": "^2.9.41",
+    "@mpxjs/vue-cli-plugin-mpx": "^2.1.16",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.16",
+    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.16",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.16",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.16",
+    "@mpxjs/webpack-plugin": "^2.9.62",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/cli": "^1.0.9",
-    "autoprefixer": "^10.4.19",
+    "@weapp-tailwindcss/cli": "^1.0.10",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
@@ -70,23 +76,16 @@
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.2",
     "vue-template-compiler": "^2.7.16",
-    "weapp-ide-cli": "^2.0.5",
-    "weapp-tailwindcss": "^3.5.2",
+    "weapp-ide-cli": "^2.0.6",
+    "weapp-tailwindcss": "^3.5.3",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.92.1"
+    "webpack": "^5.95.0"
   },
   "browserslist": [
     "ios >= 8",
     "chrome >= 47"
   ],
-  "packageManager": "yarn@1.22.22",
-  "bugs": {
-    "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
-    "directory": "demo/mpx-app"
-  },
-  "author": "ice breaker <1324318532@qq.com>"
+  "resolutions": {
+    "@babel/plugin-transform-runtime": ""
+  }
 }
