--- a/demo/native-mina/tsconfig.json
+++ b/demo/native-mina/tsconfig.json
@@ -3,18 +3,32 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "target": "es5",
-    "lib": ["ES2016"],
+    "lib": [
+      "ES2016"
+    ],
     "module": "es6",
     "strict": true,
     "moduleResolution": "node",
-    "typeRoots": ["./node_modules/@types", "./node_modules/miniprogram-api-typings"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "baseUrl": ".",
-    "types": ["miniprogram-api-typings"],
+    "types": [
+      "miniprogram-api-typings"
+    ],
     "paths": {
-      "@vant/weapp/*": ["./node_modules/@vant/weapp/dist/*"]
+      "@vant/weapp/*": [
+        "./node_modules/@vant/weapp/dist/*"
+      ]
     }
   },
-  "exclude": ["node_modules", "dist", "webpack.config.js", "jest.config.js"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "webpack.config.js",
+    "jest.config.js"
+  ],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.js"
+  ]
 }
