--- a/apps/vite-native-ts-skyline/package.json
+++ b/apps/vite-native-ts-skyline/package.json
@@ -29,6 +29,6 @@
     "tailwindcss": "^3.4.13",
     "typescript": "latest",
     "weapp-tailwindcss": "^3.5.3",
-    "weapp-vite": "latest"
+    "weapp-vite": "^1.4.1"
   }
 }
