chore: use packageRules matchPackageNames

--- a/renovate.json
+++ b/renovate.json
@@ -3,8 +3,20 @@
   "extends": [
     "config:recommended"
   ],
-  "ignoreDeps": [
-    "@dcloudio/*",
-    "@mpxjs/*"
+  // https://docs.renovatebot.com/configuration-options/#ignoredeps
+  // Currently it supports only "exact match" dependency names and not any patterns.
+  // "ignoreDeps": [
+  //   "@dcloudio/*",
+  //   "@mpxjs/*"
+  // ],
+  "packageRules": [
+    {
+      // https://docs.renovatebot.com/string-pattern-matching/#use-regex101-to-test-your-patterns
+      "matchPackageNames": [
+        "@dcloudio/*",
+        "@mpxjs/*"
+      ],
+      "enabled": false
+    }
   ]
 }
