--- a/package.json
+++ b/package.json
@@ -154,7 +154,7 @@
     "@types/vinyl-fs": "^3.0.5",
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
-    "@types/webpack4": "npm:@types/webpack@4",
+    "@types/webpack4": "npm:@types/webpack@^4.41.39",
     "@vitest/coverage-v8": "~2.0.5",
     "@vitest/ui": "~2.0.5",
     "@weapp-tailwindcss/cli": "workspace:*",
