--- a/apps/vite-native-skyline/package.json
+++ b/apps/vite-native-skyline/package.json
@@ -28,8 +28,8 @@
     "miniprogram-api-typings": "latest",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "latest",
+    "typescript": "^5.6.3",
     "weapp-tailwindcss": "^3.5.3",
-    "weapp-vite": "^1.4.5"
+    "weapp-vite": "^1.5.0"
   }
 }
