--- a/apps/vite-native-ts/package.json
+++ b/apps/vite-native-ts/package.json
@@ -27,8 +27,8 @@
     "miniprogram-api-typings": "latest",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "typescript": "latest",
+    "typescript": "^5.6.3",
     "weapp-tailwindcss": "workspace:*",
-    "weapp-vite": "^1.4.5"
+    "weapp-vite": "^1.5.0"
   }
 }
