--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -119,7 +119,7 @@
     "dist"
   ],
   "engines": {
-    "node": ">=16.6.0"
+    "node": "^18.17.0 || >=20.5.0"
   },
   "scripts": {
     "dev": "pnpm clean && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
@@ -152,7 +152,7 @@
     "@babel/parser": "~7.25.8",
     "@babel/traverse": "~7.25.7",
     "@babel/types": "~7.25.8",
-    "@csstools/postcss-is-pseudo-class": "~4.0.8",
+    "@csstools/postcss-is-pseudo-class": "~5.0.0",
     "@tailwindcss-mangle/shared": "~3.0.0",
     "@weapp-core/escape": "~2.1.0",
     "@weapp-core/regex": "~1.0.1",
@@ -161,9 +161,9 @@
     "htmlparser2": "9.1.0",
     "loader-utils": "2.0.4",
     "lru-cache": "10.4.3",
-    "magic-string": "0.30.11",
+    "magic-string": "0.30.12",
     "md5": "2.3.0",
-    "npm-registry-fetch": "^17.1.0",
+    "npm-registry-fetch": "^18.0.1",
     "postcss": "~8.4.47",
     "postcss-rem-to-responsive-pixel": "~6.0.2",
     "postcss-selector-parser": "~6.1.2",
