refactor: js ast handler

--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -129,13 +129,13 @@
     "test": "npm run postinstall && vitest run",
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
-    "clean": "node scripts/clean.js",
+    "clean": "tsx scripts/clean.ts",
     "raw": "tsx scripts/raw",
     "get-decl": "tsx scripts/get-decl.ts",
     "sync": "cnpm sync weapp-tailwindcss-webpack-plugin weapp-tailwindcss weapp-tw",
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
-    "release": "node scripts/release.js",
+    "release": "tsx scripts/release.ts",
     "generate:readme": "tsx --watch scripts/readme/write.ts watch scripts/readme/**/*",
     "lint": "eslint .",
     "lint:fix": "eslint ./src --fix",
