--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -1,5 +1,6 @@
 {
   "name": "uni-preset-vue",
+  "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "cross-env DEBUG=weapp-tw uni -p mp-weixin",
