--- a/how-to-build-components-by-tailwindcss/package.json
+++ b/how-to-build-components-by-tailwindcss/package.json
@@ -1,6 +1,7 @@
 {
   "name": "how-to-build-components-by-tailwindcss",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
