--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "lint:view": "npx @eslint/config-inspector",
     "publish-packages": "pnpm build && pnpm test && changeset version && changeset publish",
     "run:watch": "tsx scripts/watcher",
+    "set-private": "tsx scripts/setPrivate.ts",
     "script:init": "monorepo init",
     "script:sync": "monorepo sync",
     "script:clean": "monorepo clean",
@@ -109,7 +110,7 @@
     "@commitlint/types": "^19.5.0",
     "@eslint/config-inspector": "^0.5.4",
     "@icebreakers/eslint-config": "^0.6.0",
-    "@icebreakers/monorepo": "^0.6.5",
+    "@icebreakers/monorepo": "^0.6.6",
     "@icebreakers/readme": "0.1.0",
     "@icebreakers/stylelint-config": "^0.1.1",
     "@rollup/plugin-alias": "^5.1.1",
