--- a/apps/vite-native-ts-skyline/package.json
+++ b/apps/vite-native-ts-skyline/package.json
@@ -28,7 +28,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.3",
-    "weapp-tailwindcss": "^3.5.3",
+    "weapp-tailwindcss": "workspace:*",
     "weapp-vite": "^1.6.0"
   }
 }
