fix: [Bug]: 将tailwind.config中的important选项设置为一个id选择器时，编译到微信小程序后wxss会报编译错误 #470

--- a/demo/native-ts/miniprogram/app.json
+++ b/demo/native-ts/miniprogram/app.json
@@ -3,8 +3,8 @@
     "pages/index/index"
   ],
   "window": {
-    "navigationBarTextStyle": "black",
-    "navigationStyle": "custom"
+    "navigationBarTextStyle": "black"
+    // "navigationStyle": "custom"
   },
   "style": "v2",
   "rendererOptions": {
