chore(demo): upgrade deps

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "@commitlint/types": "^19.5.0",
     "@eslint/config-inspector": "^0.5.5",
     "@icebreakers/eslint-config": "^0.6.1",
-    "@icebreakers/monorepo": "^0.6.9",
+    "@icebreakers/monorepo": "^0.6.11",
     "@icebreakers/readme": "0.1.0",
     "@icebreakers/stylelint-config": "^0.1.2",
     "@rollup/plugin-alias": "^5.1.1",
@@ -139,6 +139,7 @@
     "@types/gulp-rename": "^2.0.6",
     "@types/gulp-sass": "^5.0.4",
     "@types/js-beautify": "^1.14.3",
+    "@types/jsdom": "^21.1.7",
     "@types/klaw": "^3.0.6",
     "@types/lint-staged": "^13.3.0",
     "@types/loader-utils": "^2.0.6",
@@ -188,6 +189,7 @@
     "html-loader": "^5.1.0",
     "husky": "^9.1.6",
     "js-beautify": "^1.15.1",
+    "jsdom": "^25.0.1",
     "klaw": "^4.1.0",
     "lint-staged": "^15.2.10",
     "lodash": "^4.17.21",
@@ -210,6 +212,7 @@
     "rollup": "^4.24.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.80.3",
+    "sass-true": "^8.1.0",
     "semver": "7.6.3",
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
