chore: add postcss-js as deps

--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.7.7",
     "@types/npm-registry-fetch": "^8.0.7",
+    "@types/postcss-js": "^4.0.4",
     "@types/semver": "^7.5.8",
     "@types/set-value": "^4.0.3",
     "@types/uuid": "^10.0.0",
@@ -203,6 +204,7 @@
     "pathe": "^1.1.2",
     "pkg-types": "^1.2.1",
     "postcss": "^8.4.47",
+    "postcss-js": "^4.0.1",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.1.1",
     "postcss-scss": "^4.0.9",
@@ -212,6 +214,7 @@
     "rollup": "^4.24.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.80.3",
+    "sass-embedded": "^1.80.3",
     "sass-true": "^8.1.0",
     "semver": "7.6.3",
     "set-value": "^4.1.0",
