--- a/website/package.json
+++ b/website/package.json
@@ -55,6 +55,7 @@
     "sass": "^1.80.3",
     "sass-loader": "^16.0.2",
     "tailwindcss": "^3.4.14",
+    "theme-transition": "workspace:*",
     "typedoc": "^0.26.10",
     "typedoc-plugin-markdown": "4.2.9",
     "webpack-node-externals": "^3.0.0"
