--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -64,7 +64,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.6.2",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.6.2",
+    "weapp-tailwindcss": "^3.7.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
