--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -96,7 +96,7 @@
     "typescript": "^5.6.2",
     "vite": "^4.2.0",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.6.2",
+    "weapp-tailwindcss": "^3.7.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   }
 }
