--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -87,7 +87,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.6.3",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.6.2",
+    "weapp-tailwindcss": "^3.7.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.95.0",
     "webpack-chain": "^6.5.1"
