--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -94,7 +94,7 @@
     "unplugin-vue-components": "^0.27.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.6.2",
+    "weapp-tailwindcss": "^3.7.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.90.3"
   }
