--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -119,7 +119,7 @@
     "typescript": "~5.4.2",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.6.2",
+    "weapp-tailwindcss": "^3.7.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "browserslist": [
