--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -55,7 +55,7 @@
     "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.16",
     "@mpxjs/webpack-plugin": "^2.9.62",
     "@vue/cli-service": "~5.0.0",
-    "@weapp-tailwindcss/cli": "^2.0.2",
+    "@weapp-tailwindcss/cli": "^3.0.0",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
@@ -77,7 +77,7 @@
     "typescript": "^5.5.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.7.0-alpha.2",
+    "weapp-tailwindcss": "^3.7.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.95.0"
   },
