--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -100,7 +100,7 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "@weapp-tailwindcss/cli": "^2.0.2",
+    "@weapp-tailwindcss/cli": "^3.0.0",
     "autoprefixer": "10.4.18",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
@@ -121,7 +121,7 @@
     "typescript": "~5.4.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.7.0-alpha.2",
+    "weapp-tailwindcss": "^3.7.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "browserslist": [
