--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -15,14 +15,14 @@
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
-    "@weapp-tailwindcss/cli": "^2.0.2",
+    "@weapp-tailwindcss/cli": "^3.0.0",
     "postcss-rem-to-responsive-pixel": "^6.0.2",
     "postcss-rpx-transform": "^1.0.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^2.0.6",
-    "weapp-tailwindcss": "^3.7.0-alpha.2",
+    "weapp-tailwindcss": "^3.7.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22",
