chore: add sponsor doc

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "build": "turbo run build --filter=./packages/* && turbo run build --filter=./plugins/*",
     "build:vite-docs": "turbo run build --filter=./website-weapp-vite/",
     "build:tw-docs": "turbo run build --filter=./website/",
-    "test": "vitest run",
+    "test": "vitest run --coverage.enabled",
     "test:plugins": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/*",
     "test:cli": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/cli",
     "test:typography": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/typography",
@@ -224,7 +224,7 @@
     "tslib": "^2.8.1",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
-    "turbo": "^2.3.0",
+    "turbo": "^2.3.1",
     "typescript": "^5.6.3",
     "unbuild": "^2.0.0",
     "uuid": "^11.0.3",
