chore: docs update

--- a/website/package.json
+++ b/website/package.json
@@ -45,12 +45,14 @@
     "@docusaurus/tsconfig": "3.6.3",
     "@docusaurus/types": "3.6.3",
     "@icebreakers/deploy": "^0.1.6",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/file-saver": "^2.0.7",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "docusaurus-plugin-sass": "^0.2.5",
     "docusaurus-plugin-typedoc": "1.0.5",
     "dotenv": "^16.4.5",
+    "mini-svg-data-uri": "^1.4.4",
     "node-loader": "^2.1.0",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
