--- a/apps/vite-native/package.json
+++ b/apps/vite-native/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
+    "tailwindcss-injector": "workspace:*",
     "weapp-tailwindcss": "workspace:*",
     "weapp-vite": "^1.8.2"
   }
