--- a/packages/tailwindcss-injector/package.json
+++ b/packages/tailwindcss-injector/package.json
@@ -53,9 +53,9 @@
     "types": "./dist/index.d.ts"
   },
   "dependencies": {
-    "jiti": "^2.4.1",
-    "lilconfig": "^3.1.3",
+    "htmlparser2": "^9.1.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "tailwindcss-config": "workspace:*"
   }
 }
