chore(deps): upgrade

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "build": "turbo run build --filter=./packages/* && turbo run build --filter=./plugins/*",
     "build:vite-docs": "turbo run build --filter=./website-weapp-vite/",
     "build:tw-docs": "turbo run build --filter=./website/",
-    "test": "vitest run --coverage.enabled",
+    "test": "vitest run --coverage.enabled --coverage.all=false",
     "test:plugins": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/*",
     "test:cli": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/cli",
     "test:typography": "vitest run --coverage.enabled --coverage.all=false --project=@weapp-tailwindcss/typography",
@@ -177,7 +177,7 @@
     "diff": "^7.0.0",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "eslint": "^9.16.0",
+    "eslint": "^9.17.0",
     "execa": "^9.5.2",
     "express": "^4.21.2",
     "fast-glob": "^3.3.2",
@@ -226,7 +226,7 @@
     "tsx": "^4.19.2",
     "turbo": "^2.3.3",
     "typescript": "^5.7.2",
-    "unbuild": "^3.0.0",
+    "unbuild": "^3.0.1",
     "uuid": "^11.0.3",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
