--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@ast-grep/napi": "^0.32.2",
+    "@ast-grep/napi": "^0.32.3",
     "@babel/core": "^7.26.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.11",
@@ -110,7 +110,7 @@
     "@commitlint/types": "^19.5.0",
     "@eslint/config-inspector": "^0.6.0",
     "@icebreakers/eslint-config": "^0.7.8",
-    "@icebreakers/monorepo": "^0.6.19",
+    "@icebreakers/monorepo": "^0.6.20",
     "@icebreakers/readme": "0.1.0",
     "@icebreakers/stylelint-config": "^0.1.3",
     "@rollup/plugin-alias": "^5.1.1",
@@ -146,7 +146,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.3",
     "@types/npm-registry-fetch": "^8.0.7",
     "@types/postcss-js": "^4.0.4",
     "@types/semver": "^7.5.8",
@@ -190,6 +190,7 @@
     "js-beautify": "^1.15.1",
     "jsdom": "^25.0.1",
     "klaw": "^4.1.0",
+    "lightningcss": "^1.28.2",
     "lint-staged": "^15.3.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
@@ -219,7 +220,7 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17",
     "terser-webpack-plugin": "^5.3.11",
-    "ts-morph": "^24.0.0",
+    "ts-morph": "^25.0.0",
     "tsd": "^0.31.2",
     "tslib": "^2.8.1",
     "tsup": "^8.3.5",
@@ -236,6 +237,6 @@
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-build-utils": "^0.0.7",
-    "yaml": "^2.6.1"
+    "yaml": "^2.7.0"
   }
 }
