--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -56,6 +56,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4040420241231001",
     "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4040420241231001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4040420241231001",
+    "@weapp-core/escape": "^2.1.0",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.10",
     "eventemitter3": "^5.0.1",
@@ -63,6 +64,7 @@
     "magic-string": "^0.30.8",
     "miniprogram-computed": "^4.4.0",
     "p-queue": "8.0.1",
+    "tailwind-merge": "^2.6.0",
     "uview-plus": "^3.1.45",
     "vk-uview-ui": "^1.5.2",
     "vue": "^3.4.21",
@@ -90,12 +92,12 @@
     "postcss-rpx-transform": "^1.0.1",
     "sass": "^1.71.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.2",
     "vite": "5.2.8",
-    "weapp-ide-cli": "^2.0.6",
+    "weapp-ide-cli": "^2.0.8",
     "weapp-tailwindcss": "^3.7.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
