--- a/packages/tailwind-merge-weapp-plugin/package.json
+++ b/packages/tailwind-merge-weapp-plugin/package.json
@@ -31,7 +31,7 @@
     "lint:fix": "eslint . --fix"
   },
   "peerDependencies": {
-    "tailwind-merge": "~2.0.0"
+    "tailwind-merge": "^2.0.0"
   },
   "publishConfig": {
     "exports": {
