chore(deps): upgrade

--- a/packages/merge/package.json
+++ b/packages/merge/package.json
@@ -43,6 +43,8 @@
     "types": "./dist/index.d.ts"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
