refactor: add more pkgs

--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -161,14 +161,15 @@
     "@tailwindcss-mangle/shared": "~4.0.1",
     "@weapp-core/escape": "~3.0.1",
     "@weapp-core/regex": "~1.0.1",
-    "consola": "^3.3.3",
+    "@weapp-tailwindcss/init": "workspace:*",
+    "@weapp-tailwindcss/logger": "workspace:*",
+    "@weapp-tailwindcss/shared": "workspace:*",
     "debug": "~4.4.0",
     "htmlparser2": "10.0.0",
     "loader-utils": "2.0.4",
     "lru-cache": "10.4.3",
     "magic-string": "0.30.17",
     "md5": "2.3.0",
-    "npm-registry-fetch": "^18.0.2",
     "postcss": "~8.4.49",
     "postcss-rem-to-responsive-pixel": "~6.0.2",
     "postcss-selector-parser": "~7.0.0",
