--- a/packages/weapp-tailwindcss/tsconfig.json
+++ b/packages/weapp-tailwindcss/tsconfig.json
@@ -6,7 +6,7 @@
     ],
     "baseUrl": ".",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "paths": {
       "@/*": [
         "src/*"
