--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/prompt-cli": "^19.7.0",
     "@commitlint/types": "^19.5.0",
-    "@eslint/config-inspector": "^0.7.0",
+    "@eslint/config-inspector": "^0.7.1",
     "@icebreakers/eslint-config": "^0.7.9",
     "@icebreakers/monorepo": "^0.6.21",
     "@icebreakers/readme": "0.1.0",
@@ -124,7 +124,7 @@
     "@types/babel__generator": "^7.6.8",
     "@types/babel__traverse": "^7.20.6",
     "@types/debug": "^4.1.12",
-    "@types/diff": "^6.0.0",
+    "@types/diff": "^7.0.0",
     "@types/dlv": "^1.1.5",
     "@types/express": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
@@ -160,6 +160,7 @@
     "@vitest/coverage-v8": "~2.1.8",
     "@vitest/ui": "~2.1.8",
     "@weapp-tailwindcss/cli": "workspace:*",
+    "@weapp-tailwindcss/shared": "workspace:*",
     "anymatch": "^3.1.3",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
