--- a/packages/tailwindcss-injector/package.json
+++ b/packages/tailwindcss-injector/package.json
@@ -53,6 +53,7 @@
     "types": "./dist/index.d.ts"
   },
   "dependencies": {
+    "@weapp-tailwindcss/shared": "workspace:*",
     "fs-extra": "^11.2.0",
     "htmlparser2": "^10.0.0",
     "magic-string": "^0.30.17",
