chore(deps): upgrade

--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -55,6 +55,7 @@
     "@types/gulp-util": "^3.0.41",
     "@types/node": "^22.7.4",
     "@weapp-tailwindcss/cli": "^3.0.0",
+    "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
@@ -87,7 +88,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "weapp-ide-cli": "^2.0.8",
-    "weapp-tailwindcss": "^3.7.0",
+    "weapp-tailwindcss": "^3.8.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   }
 }
