--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -65,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
     "@weapp-tailwindcss/cli": "^3.0.0",
+    "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "4.0.8",
@@ -87,7 +88,7 @@
     "terser-webpack-plugin": "^5.3.11",
     "typescript": "~5.7.2",
     "weapp-ide-cli": "^2.0.8",
-    "weapp-tailwindcss": "^3.7.0",
+    "weapp-tailwindcss": "^3.8.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1",
     "webpack-chain": "^6.5.1"
