--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -35,6 +35,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/lodash": "^4.17.9",
     "@weapp-tailwindcss/cli": "^3.0.0",
+    "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^8.4.1",
     "babel-plugin-lodash": "^3.3.4",
@@ -64,7 +65,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.6.2",
     "weapp-ide-cli": "^2.0.8",
-    "weapp-tailwindcss": "^3.7.0",
+    "weapp-tailwindcss": "^3.8.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
