--- a/demo/native-ts/package.json
+++ b/demo/native-ts/package.json
@@ -17,6 +17,7 @@
   "dependencies": {},
   "devDependencies": {
     "@weapp-tailwindcss/cli": "^3.0.0",
+    "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.20",
     "miniprogram-api-typings": "^4.0.1",
     "postcss": "^8.4.47",
@@ -27,7 +28,7 @@
     "tailwindcss-patch": "^5.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^2.0.8",
-    "weapp-tailwindcss": "^3.7.0",
+    "weapp-tailwindcss": "^3.8.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "weapp-vite": "^1.6.4"
   },
