--- a/demo/taro-app-vite/package.json
+++ b/demo/taro-app-vite/package.json
@@ -76,6 +76,7 @@
     "@types/react": "^18.3.11",
     "@vitejs/plugin-react": "^4.3.2",
     "@weapp-tailwindcss/cli": "^3.0.0",
+    "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.20",
     "babel-preset-taro": "4.0.6",
     "eslint": "^8.57.0",
@@ -96,7 +97,7 @@
     "typescript": "^5.6.2",
     "vite": "^4.2.0",
     "weapp-ide-cli": "^2.0.8",
-    "weapp-tailwindcss": "^3.7.0",
+    "weapp-tailwindcss": "^3.8.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   }
 }
