--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -81,6 +81,7 @@
     "@typescript-eslint/parser": "^7.13.0",
     "@vue/babel-preset-jsx": "^1.2.4",
     "@weapp-tailwindcss/cli": "^3.0.0",
+    "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.19",
     "babel-preset-taro": "3.6.35",
     "cross-env": "^7.0.3",
@@ -100,7 +101,7 @@
     "typescript": "~5.4.5",
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^2.0.8",
-    "weapp-tailwindcss": "^3.7.0",
+    "weapp-tailwindcss": "^3.8.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.0"
   }
