--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -76,6 +76,7 @@
     "@vue/babel-plugin-jsx": "^1.1.5",
     "@vue/compiler-sfc": "^3.5.13",
     "@weapp-tailwindcss/cli": "^3.0.0",
+    "@weapp-tailwindcss/merge": "^0.0.1-alpha.0",
     "autoprefixer": "^10.4.19",
     "babel-preset-taro": "4.0.8",
     "cross-env": "^7.0.3",
@@ -94,7 +95,7 @@
     "unplugin-vue-components": "^0.28.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^2.0.8",
-    "weapp-tailwindcss": "^3.7.0",
+    "weapp-tailwindcss": "^3.8.0-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.97.1"
   }
